fix: harden semantic migration recovery